Changes .travis.yml and adds initial install scripts for Verilator and Yosys.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ env:
 
 install:
   - bash .install_verilator.sh
+  - bash .install_yosys.sh
+
 
 script:
   - set -o pipefail && sbt -Dchisel3Version=$CHISEL3 -Dchisel-iotestersVersion=$CHISEL_TESTERS test
