--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ env:
     CHISEL3=3.3-SNAPSHOT
     CHISEL_TESTERS=1.4-SNAPSHOT
 
+before_install:
+    sudo apt-get install gperf
+
 install:
   - bash .install_verilator.sh
   - bash .install_iverilog.sh
