--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ install:
 
 script:
   #- set -o pipefail && sbt -Dchisel3Version=$CHISEL3 -Dchisel-iotestersVersion=$CHISEL_TESTERS test
+  # Setup docker container 
   docker run -it -v $(pwd):/openLANE_flow -v $PDK_ROOT:$PDK_ROOT -e PDK_ROOT=$PDK_ROOT -u $(id -u $USER):$(id -g $USER) openlane:rc2
-  #
+  # Run flow for design SPM as test
   ./flow.tcl -design spm
