Trying to setup Travis with PDKs and Openlane.

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,4 +31,4 @@ script:
   # Setup docker container 
   docker run -it -v $(pwd):/openLANE_flow -v $PDK_ROOT:$PDK_ROOT -e PDK_ROOT=$PDK_ROOT -u $(id -u $USER):$(id -g $USER) openlane:rc2
   # Run flow for design SPM as test
-  #./flow.tcl -design spm
+  ./flow.tcl -design spm
