Trying to setup Travis with PDKs and Openlane.

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,12 +27,4 @@ install:
   - bash .setup_openlane.sh
 
 script:
-  #- set -o pipefail && sbt -Dchisel3Version=$CHISEL3 -Dchisel-iotestersVersion=$CHISEL_TESTERS test
-  # Setup docker container 
-  docker run -it -v $(pwd):/openLANE_flow -v $PDK_ROOT:$PDK_ROOT -e PDK_ROOT=$PDK_ROOT -u $(id -u $USER):$(id -g $USER) openlane:rc2
-  # Run flow for design SPM as test
-  source flow.tcl -design spm
-  exit
-  # Copy GDS file to transfer.sh
-  gds_file="designs/spm/runs/*/results/magic/spm.gds"
-  curl -n -T $gds_file https://transfer.sh
+  - bash .run_openlane.sh
