--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,10 @@ env:
   global:
     INSTALL_DIR=$TRAVIS_BUILD_DIR/install
     VERILATOR_ROOT=$INSTALL_DIR
-    PDK_ROOT=$INSTALL_DIR
+    PDK_ROOT=$(INSTALL_DIR)/open_pdks/sky130
     PATH=$PATH:$VERILATOR_ROOT/bin:$TRAVIS_BUILD_DIR/utils/bin
     CHISEL3=3.3-SNAPSHOT
     CHISEL_TESTERS=1.4-SNAPSHOT
-
 before_install:
     sudo apt-get install gperf
 
