--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ env:
     TRAVIS_DEBUG_MODE=true
     INSTALL_DIR=$TRAVIS_BUILD_DIR/install
     VERILATOR_ROOT=$INSTALL_DIR
-    #PDK_ROOT=/home/travis/build/milovanovic/playground/install/open_pdks/sky130
-    PDK_ROOT=$INSTALL_DIR
+    PDK_ROOT=$INSTALL_DIR/open_pdks
     PATH=$PATH:$VERILATOR_ROOT/bin:$TRAVIS_BUILD_DIR/utils/bin
     CHISEL3=3.3-SNAPSHOT
     CHISEL_TESTERS=1.4-SNAPSHOT
